@@ -24,3 +24,18 @@ respawnTime: 50
 # reset process. (int, seconds) default: 10
 timeBeforeReset: 10
 
+# Powerup: Golems
+# You can set how much time golems live for (int,seconds), their targeting range
+# (int, radius blocks), and their health (int, hitpoints).
+# default life: 240, default range: 7, default health: 20
+golemLife: 240
+golemTargetDistance: 7
+golemHealth: 20
+
+# Powerup: Bugs
+# You can set how much time bugs live for (seconds), their targeting range
+# (int, radius blocks), and their health (int, hitpoints).
+# default life: 120, default range: 4, default health: 8
+bugLife: 120
+bugTargetDistance: 4
+bugHealth: 8
